Хочу источники новостей выпускающие краткие сводки главного за день, неделю, месяц, год. Максимум статистики и фактов, минимум эмоций и оценок. Читая новости можно удерживать в сознании вопрос "Как получение этой информации помогает мне в достижении моих целей".

Current events.
- https://en.wikipedia.org/wiki/Portal:Current_events
- https://ru.wikipedia.org/wiki/%D0%9F%D0%BE%D1%80%D1%82%D0%B0%D0%BB:%D0%A2%D0%B5%D0%BA%D1%83%D1%89%D0%B8%D0%B5_%D1%81%D0%BE%D0%B1%D1%8B%D1%82%D0%B8%D1%8F

2024.
- https://en.wikipedia.org/wiki/2024
- https://ru.wikipedia.org/wiki/2024_%D0%B3%D0%BE%D0%B4

2023.
- https://en.wikipedia.org/wiki/2023
- https://ru.wikipedia.org/wiki/2023_%D0%B3%D0%BE%D0%B4

https://t.me/RationalAnswer/1026 - уклон в финансы, еженедельные, нужно отыскивать в общей ленте. </> https://t.me/ftladvisers/2534 - финансовые ежеполунедельные, нужно отыскивать в общей ленте. </> https://www.britannica.com/topic/2023-The-Year-in-Review https://www.worldometers.info