@@ -13,7 +13,7 @@
 </head>
 <body><main>
 <article>
-    <p>☠ Biology. Диванный биохакинг вроде курсов пирацетама внутривенно. Желания вроде быть живым межзвёздным кораблём размером с планету.</p>
+    <p>☠️ Biology. Диванный биохакинг вроде курсов пирацетама внутривенно. Желания вроде быть живым межзвёздным кораблём размером с планету.</p>
 
     <p>Хаотично принимаю последний год. <span class="nowrap">Омега-3.[1]</span> Магний. Витамин D3. Цинк. Глицин. Витамин C. <span class="nowrap">Окситриптан.[2]</span></p>
 
