@@ -19,7 +19,7 @@
     <p>⚙️ Technology. Программирую больше 10 лет. Бывал <span class="nowrap">человеком-оркестром</span> в проекте с нуля до миллиона ежедневных пользователей. Учу детскую математику. By the way I use Linux.
         <br>&nbsp;— <a href="/technology">https:<wbr>//<wbr>dmitryratty<wbr>.gitlab<wbr>.io<wbr>/technology</a></p>
 
-    <p>☠ Biology. Диванный биохакинг вроде курсов пирацетама внутривенно. Желания вроде быть живым межзвёздным кораблём размером с планету.
+    <p>☠️ Biology. Диванный биохакинг вроде курсов пирацетама внутривенно. Желания вроде быть живым межзвёздным кораблём размером с планету.
         <br>&nbsp;— <a href="/biology">https:<wbr>//<wbr>dmitryratty<wbr>.gitlab<wbr>.io<wbr>/biology</a></p>
 
     <p>🍔 Wealth. Половиной богатства человечества владеет 1% людей с размерами богатств от миллиона долларов.
