@@ -13,6 +13,10 @@
 </head>
 <body><main>
 <article>
+    <p>Добро с хвостом и острыми рогами.</p>
+
+    <p class="dinkus">* * *</p>
+
     <p>Добро, должно быть, с кулаками,
         <br>С хвостом и острыми рогами,
         <br>С копытами и с бородой.
