@@ -28,7 +28,7 @@
     <p>Отказ от негативной оценки своих первичных эмоций может позволить избавиться от негативных вторичных эмоций. Я ощущаю страх перед началом публичного выступления. Я ощущаю стыд за то, что мне страшно перед началом публичного выступление. Потому что в детстве я выучил, что бояться <span class="nowrap">чего-либо</span> — стыдно. Можно попробовать выучить, что испытывать страх это нормально и перестать испытывать сопутствующий стыд. &lt;•&gt; Ещё: "Я ощущаю вину за то, что не ощущаю того, что согласно текущим нормам ощущать в данной ситуации считается хорошо…", "Плохо быть эгоистичным, холодным, слабым…".</p>
 
     <p>Хочу источники новостей выпускающие краткие сводки главного за день, неделю, месяц, год. Максимум статистики и фактов, минимум эмоций и оценок. Читая новости можно удерживать в сознании вопрос "Как получение этой информации помогает мне в достижении моих целей".
-        <br>— <a href="/news">https:<wbr>//<wbr>dmitryratty<wbr>.gitlab<wbr>.io<wbr>/news</a></p>
+        <br>&nbsp;— <a href="/news">https:<wbr>//<wbr>dmitryratty<wbr>.gitlab<wbr>.io<wbr>/news</a></p>
 
     <p>Сейчас на Земле 8 миллиардов человек, чтобы каждому уделить по секунде времени нужно 254 года.</p>
 
@@ -36,15 +36,15 @@
         <br>— <a href="https://en.wikipedia.org/wiki/Idiot_plot">https:<wbr>//<wbr>en<wbr>.wikipedia<wbr>.org<wbr>/wiki<wbr>/Idiot<wbr>_plot</a></p>
 
     <p>A Judas goat is a trained goat used in general animal herding. The Judas goat is trained to associate with sheep or cattle, leading them to a specific destination. In stockyards, a Judas goat will lead sheep to slaughter, while its own life is spared.
-        <br>— <a href="/life/judas-goat">https:<wbr>//<wbr>dmitryratty<wbr>.gitlab<wbr>.io<wbr>/life<wbr>/judas<wbr>-goat</a></p>
+        <br>&nbsp;— <a href="/life/judas-goat">https:<wbr>//<wbr>dmitryratty<wbr>.gitlab<wbr>.io<wbr>/life<wbr>/judas<wbr>-goat</a></p>
 
     <p>В 1774 английский фермер Benjamin Jesty делает своей семье прививку дающую иммунитет от натуральной оспы. В 1774 король Франции Louis XV умирает от натуральной оспы.
-        <br>— <a href="/life/benjamin-jesty">https:<wbr>//<wbr>dmitryratty<wbr>.gitlab<wbr>.io<wbr>/life<wbr>/benjamin<wbr>-jesty</a></p>
-
-    <p><a href="https://ru.wikipedia.org/wiki/Плачущий_Гераклит_и_смеющийся_Демокрит">https:<wbr>//<wbr>ru<wbr>.wikipedia<wbr>.org<wbr>/wiki<wbr>/Плачущий<wbr>_Гераклит<wbr>_и<wbr>_смеющийся<wbr>_Демокрит</a></p>
+        <br>&nbsp;— <a href="/life/benjamin-jesty">https:<wbr>//<wbr>dmitryratty<wbr>.gitlab<wbr>.io<wbr>/life<wbr>/benjamin<wbr>-jesty</a></p>
 
     <p>Добро с хвостом и острыми рогами.
-        <br>— <a href="/life/horned-goodness">https:<wbr>//<wbr>dmitryratty<wbr>.gitlab<wbr>.io<wbr>/life<wbr>/horned<wbr>-goodness</a></p>
+        <br>&nbsp;— <a href="/life/horned-goodness">https:<wbr>//<wbr>dmitryratty<wbr>.gitlab<wbr>.io<wbr>/life<wbr>/horned<wbr>-goodness</a></p>
+
+    <p><a href="https://ru.wikipedia.org/wiki/Плачущий_Гераклит_и_смеющийся_Демокрит">https:<wbr>//<wbr>ru<wbr>.wikipedia<wbr>.org<wbr>/wiki<wbr>/Плачущий<wbr>_Гераклит<wbr>_и<wbr>_смеющийся<wbr>_Демокрит</a></p>
 
     <p class="dinkus">* * *</p>
 
