@@ -36,7 +36,10 @@
         <br>⚙ Gear — 1 symbol, simplified display on Android/Brave.
         <br>✉️ Envelope — 2 symbols.
         <br>✉ Envelope — 1 symbol, simplified display on Android/Brave.
-        <br>📨
+        <br>☠️ Scales — 2 symbols.
+        <br>☠ Skull and Crossbones — 1 symbol, simplified display on Android/Brave.</p>
+
+    <p>📨
         <br>📩
         <br>💌
         <br>❄ Snowflake
@@ -44,7 +47,6 @@
         <br>🐀
         <br>🐭
         <br>➗ 🦉 🖤 ⚫ 💠 🪐 💬 📝 📜 📮 📯 📦 🚧 🏠 💡 🕶 🌙 🌞 🌑 ✨
-        <br>☠
         <br>💀</p>
 
     <p class="dinkus">* * *</p>
