@@ -13,8 +13,6 @@
 </head>
 <body><main>
 <article>
-    <p><span class="nowrap">#include-short-split</span></p>
-
     <p>Одна ветка "main".</p>
 
     <p>Инициализация полей в Котлине.</p>
