@@ -1,4 +1,4 @@
-☠ Biology. Диванный биохакинг вроде курсов пирацетама внутривенно. Желания вроде быть живым межзвёздным кораблём размером с планету.
+☠️ Biology. Диванный биохакинг вроде курсов пирацетама внутривенно. Желания вроде быть живым межзвёздным кораблём размером с планету.
 - #include-short-link
 
 Хаотично принимаю последний год. Омега-3.[1] Магний. Витамин D3. Цинк. Глицин. Витамин C. Окситриптан.[2]
