@@ -1,3 +1,8 @@
+Добро с хвостом и острыми рогами.
+- #include-short-link
+
+* * *
+
 Добро, должно быть, с кулаками,
 С хвостом и острыми рогами,
 С копытами и с бородой.
