@@ -21,6 +21,9 @@ https://stackoverflow.com/questions/32413731/color-for-unicode-emoji
 ⚙ Gear - 1 symbol, simplified display on Android/Brave.
 ✉️ Envelope - 2 symbols.
 ✉ Envelope - 1 symbol, simplified display on Android/Brave.
+☠️ Scales - 2 symbols.
+☠ Skull and Crossbones - 1 symbol, simplified display on Android/Brave.
+
 📨
 📩
 💌
@@ -29,7 +32,6 @@ https://stackoverflow.com/questions/32413731/color-for-unicode-emoji
 🐀
 🐭
 ➗ 🦉 🖤 ⚫ 💠 🪐 💬 📝 📜 📮 📯 📦 🚧 🏠 💡 🕶 🌙 🌞 🌑 ✨
-☠
 💀
 
 * * *
