@@ -1,5 +1,3 @@
-#include-short-split
-
 Одна ветка "main".
 
 Инициализация полей в Котлине.
