@@ -1,4 +1,5 @@
 Хочу источники новостей выпускающие краткие сводки главного за день, неделю, месяц, год. Максимум статистики и фактов, минимум эмоций и оценок. Читая новости можно удерживать в сознании вопрос "Как получение этой информации помогает мне в достижении моих целей".
+- #include-short-link
 
 Current events.
 - https://en.wikipedia.org/wiki/Portal:Current_events
